--- a/src/webapp/templates/index.html
+++ b/src/webapp/templates/index.html
@@ -48,7 +48,7 @@ content %}
         </div>
         <div id="modal-actions">
           <div id="modal-heart" class="heart"></div>
-          <span id="modal-modify">Modify</span>
+          <span id="modal-modify">Edit Tags</span>
           <span id="modal-delete">Delete</span>
           <div id="confirmation">
             <span id="confirmation-prompt">
