--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -8,11 +8,12 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    {% block styles %}{% endblock %}
     <link href="https://fonts.cdnfonts.com/css/gg-sans-2" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <h1>CORDPICS</h1>
+      {% include "navbar.html" %}
       <div id="profile">
         <span>Username</span>
         <img
@@ -27,5 +28,6 @@
       src="{{ url_for('static', filename='script.js') }}"
       type="text/javascript"
     ></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
