--- a/src/webapp/templates/base.j2
+++ b/src/webapp/templates/base.j2
@@ -1,14 +1,38 @@
-{% include 'header.j2' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CordPics</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>{% block title %}{% endblock %}</title>
+    <link
+            rel="stylesheet"
+            href="{{ url_for('static', filename='style.css') }}"
+    />
+    {% block styles %}{% endblock %}
+    <link href="https://fonts.cdnfonts.com/css/gg-sans-2" rel="stylesheet"/>
 </head>
 <body>
-{% block header %}{% endblock %}
-<div id="page-content">
-    {% block content %}{% endblock %}
-</div>
+<header>
+    {% include "navbar.j2" %}
+    {% if session['user_id'] %}
+        <div id="profile">
+            <span>{{ session['user_name'] }}</span>
+            <img
+                    id="profile-picture"
+                    src="https://cdn.discordapp.com/avatars/{{ session['user_discord_id'] }}/{{ session['user_avatar'] }}.png"
+                    alt="avatar"
+            />
+        </div>
+    {% else %}
+        <a href="{{ url_for('login') }}">
+            <button id="login-button">Login</button>
+        </a>
+    {% endif %}
+</header>
+<main>{% block content %}{% endblock %}</main>
+<script
+        src="{{ url_for('static', filename='script.js') }}"
+        type="text/javascript"
+></script>
 </body>
 </html>
