Styled install and login button

--- a/src/webapp/templates/base.j2
+++ b/src/webapp/templates/base.j2
@@ -24,7 +24,7 @@
             />
         </div>
     {% else %}
-        <a href="{{ url_for('login') }}">
+        <a href="{{ url_for('login') }}" id="login-button-container">
             <button id="login-button">Login</button>
         </a>
     {% endif %}
