--- a/src/webapp/templates/management.j2
+++ b/src/webapp/templates/management.j2
@@ -13,7 +13,7 @@ styles %}
         <div id="installable-on">
             <h3 id="installable-on-text">Installable On</h3>
             <div id="installable-on-list"></div>
-            <a href="{{ url_for('install_redirect') }}">
+            <a href="{{ url_for('install_redirect') }}" id="install-button-container">
                 <button id="install-button">Install</button>
             </a>
         </div>
