--- a/src/webapp/static/management.css
+++ b/src/webapp/static/management.css
@@ -52,10 +52,14 @@ main {
     background-color: var(--accent-color);
     color: var(--text-color);
     border-radius: 15px;
-    padding: 5px 10px;
-    width: 80%;
-    font-size: 1em;
     margin: 5px 0;
+    width: 100%;
+    font-size: 1em;
+}
+
+#install-button-container {
+    width: 100%;
+    padding: 5px 10px;
 }
 
 #installed-on-text,
