--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -62,6 +62,17 @@ input:-webkit-autofill:active {
     margin-left: 10px;
 }
 
+#login-button-container {
+    
+}
+
+#login-button {
+    color: var(--text-color);
+    background: var(--accent-color);
+    padding: 10px;
+    border-radius: 5px;
+}
+
 nav {
     flex-grow: 1;
     display: flex;
