--- a/src/webapp/templates/index.j2
+++ b/src/webapp/templates/index.j2
@@ -1,5 +1,7 @@
 {% extends "base.j2" %}
 {% block content %}
+<section id="home-page-content">
 	<span id="tagline">Welcome to CordPics!</span>
     <p id="welcome-text">CordPics is the easy way to browse through lots of images on Discord.</p>
+</section>
 {% endblock %}
