--- a/src/webapp/templates/base.j2
+++ b/src/webapp/templates/base.j2
@@ -34,5 +34,6 @@
         src="{{ url_for('static', filename='script.js') }}"
         type="text/javascript"
 ></script>
+{% block scripts %}{% endblock %}
 </body>
 </html>
