feat: load channel list on management page

--- a/src/webapp/templates/management.j2
+++ b/src/webapp/templates/management.j2
@@ -11,6 +11,7 @@ styles %}
             <div id="installed-on-list">
                 {% for guild in installed_guilds %}
                     <div class="server">
+                        <span class="server-id">{{ guild.id }}</span>
                         <img class="server-image"
                              src="https://cdn.discordapp.com/icons/{{ guild.id }}/{{ guild.icon }}">
                         <span class="server-name">{{ guild.name }}</span>
