--- a/src/webapp/static/gallery.css
+++ b/src/webapp/static/gallery.css
@@ -213,7 +213,8 @@
 
 .gallery-item {
     width: 100%;
-    height: 100%;
+    /* what was this doing here? it fucked the whole layout. */
+    /*height: 100%;*/
     position: relative;
     margin-bottom: 15px;
 }
