--- a/src/webapp/templates/gallery.j2
+++ b/src/webapp/templates/gallery.j2
@@ -37,8 +37,12 @@
     </div>
 
     <div id="modal-body">
-      <img src="" alt="" id="modal-image" />
+      <div id="modal-image-container">
+        <div id="back-button"></div>
+        <img src="" alt="" id="modal-image" />
+        <div id="forward-button"></div>
 
+      </div>
       <div id="modal-image-info">
         <div class="modal-info">
           <h3 class="modal-heading">Uploaded By:</h3>
