--- a/src/webapp/static/gallery.css
+++ b/src/webapp/static/gallery.css
@@ -375,17 +375,72 @@
     justify-content: space-between;
 }
 
-#modal-image {
-    width: 90%;
+#modal-image-container {
+    position: relative;
     margin: 10px;
-    border-radius: 10px;
     align-self: center;
+    align-items: center;
+    width: 90%;
+    display: flex;
+}
+
+#modal-image {
+    width: 100%;
+    border-radius: 10px;
+    justify-self: center;
+}
+
+#back-button,
+#forward-button {
+    cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+}
+
+#back-button::after,
+#forward-button::after {
+    content: "";
+    height: 1rem;
+    width: 1rem;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    position: relative;
+    display: inline-block;
+}
+
+#back-button::after {
+    left: 30%;
+    top: 22%;
+    transform: rotate(45deg);
+}
+
+#forward-button::after {
+    left: 13%;
+    top: 22%;
+    transform: rotate(-135deg);
+}
+
+
+#back-button:hover,
+#forward-button:hover {
+    background-color: var(--accent-color);
+}
+
+#back-button {
+    left: 5px;
+}
+
+#forward-button {
+    right: 5px;
 }
 
 #modal-image-info {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    width: 100%;
     gap: 5px;
     margin: 0 10px;
 }
@@ -564,9 +619,15 @@
 
     #modal-image-info {
         margin: 10px 0 0 0;
+        width: 50%;
+
+    }
+
+    #modal-image-container {
+        width: 50%;
     }
 
     #modal-image {
-        width: 50%;
+        width: 100%;
     }
 }
