Added intersection observer

--- a/src/webapp/templates/gallery.j2
+++ b/src/webapp/templates/gallery.j2
@@ -29,6 +29,7 @@
   </div>
 </form>
 <section id="gallery"></section>
+<div id="sentinel">Observe</div>
 <div id="popup">
   <div id="modal">
     <div id="modal-header">
