--- a/src/webapp/templates/base.j2
+++ b/src/webapp/templates/base.j2
@@ -12,6 +12,9 @@
     <link href="https://fonts.cdnfonts.com/css/gg-sans-2" rel="stylesheet"/>
 </head>
 <body>
+<noscript>
+    <span>Enable JavaScript.</span>
+</noscript>
 <header>
     {% include "navbar.j2" %}
     {% if session['user_id'] %}
