--- a/src/webapp/templates/management.j2
+++ b/src/webapp/templates/management.j2
@@ -26,7 +26,7 @@ styles %}
                 {% for guild in installable_guilds %}
                     <div class="server">
                         <img class="server-image"
-                             src="https://cdn.discordapp.com/icons/{{ guild.id }}/{{ guild.icon }}">
+                             src="https://cdn.discordapp.com/icons/{{ guild.id }}/{{ guild.icon }}" alt="Server icon">
                         <span class="server-name">{{ guild.name }}</span>
                     </div>
                 {% endfor %}
