Remove text from sentinel

--- a/src/webapp/templates/gallery.j2
+++ b/src/webapp/templates/gallery.j2
@@ -40,7 +40,7 @@
   </div>
 </form>
 <section id="gallery"></section>
-<div id="sentinel">Observe</div>
+<div id="sentinel"></div>
 <div id="popup">
   <div id="modal">
     <div id="modal-header">
